@@ -1,2 +1,3 @@
-java -Xmx1024M -Xms1024M -jar server.jar nogui 
+@echo off
+java -Xms1G -Xmx1G -XX:+UseConcMarkSweepGC -jar server.jar nogui
 pause
